--- a/src/main/resources/assets/iceandollie/lang/en_us.json
+++ b/src/main/resources/assets/iceandollie/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.iceandollie.bamboo": "Bamboo",
   "subtitles.balloon_snap": "",
   "item_group.iceandollie.quests": "Quests",
+  "gui.iceandollie.quest_gui.tooltip_empty": "ooooooooooooooooo",
+  "key.iceandollie.testing": "Testing",
   "subtitles.balloon_pop": "",
   "item.iceandollie.balloon_spawn_egg": "Balloon Spawn Egg"
 }
