--- a/src/main/resources/assets/iceandollie/lang/en_us.json
+++ b/src/main/resources/assets/iceandollie/lang/en_us.json
@@ -3,6 +3,8 @@
   "item.iceandollie.bamboo": "Bamboo",
   "subtitles.balloon_snap": "",
   "item_group.iceandollie.quests": "Quests",
+  "subtitles.pop_2": "",
+  "subtitles.pop_1": "",
   "subtitles.balloon_pop": "",
   "item.iceandollie.balloon_spawn_egg": "Balloon Spawn Egg"
 }
